// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SummarySection > omits metric cards when playerMetrics has no data 1`] = `
<div>
  <section>
    <div
      class="cards"
    >
      <div
        class="card full progress"
      >
        <svg
          class="circularProgressBar correct medium"
          height="100"
          width="100"
        >
          <circle
            class="circleBackground"
            cx="50"
            cy="50"
            fill="transparent"
            r="45"
            stroke-width="10"
          />
          <circle
            class="circleProgress"
            cx="50"
            cy="50"
            fill="transparent"
            r="45"
            stroke-linecap="round"
            stroke-width="10"
            style="stroke-dasharray: 282.7433388230814; stroke-dashoffset: 0;"
          />
          <text
            class="progressText"
            dominant-baseline="middle"
            text-anchor="middle"
            x="50%"
            y="50%"
          >
            100
            %
          </text>
        </svg>
        <div
          class="text"
        >
          Difficulty: 100%
        </div>
      </div>
      <div
        class="card full details"
      >
        <div
          class="column"
        >
          <div
            class="item"
          >
            <div
              class="icon"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-gamepad"
                data-icon="gamepad"
                data-prefix="fas"
                role="img"
                viewBox="0 0 640 512"
              >
                <path
                  d="M448 64c106 0 192 86 192 192S554 448 448 448l-256 0C86 448 0 362 0 256S86 64 192 64l256 0zM192 176c-13.3 0-24 10.7-24 24l0 32-32 0c-13.3 0-24 10.7-24 24s10.7 24 24 24l32 0 0 32c0 13.3 10.7 24 24 24s24-10.7 24-24l0-32 32 0c13.3 0 24-10.7 24-24s-10.7-24-24-24l-32 0 0-32c0-13.3-10.7-24-24-24zm240 96a32 32 0 1 0 0 64 32 32 0 1 0 0-64zm64-96a32 32 0 1 0 0 64 32 32 0 1 0 0-64z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="title"
            >
              Game Mode
            </div>
            <div
              class="value"
            >
              Classic
            </div>
          </div>
          <div
            class="item"
          >
            <div
              class="icon"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-user"
                data-icon="user"
                data-prefix="fas"
                role="img"
                viewBox="0 0 448 512"
              >
                <path
                  d="M224 248a120 120 0 1 0 0-240 120 120 0 1 0 0 240zm-29.7 56C95.8 304 16 383.8 16 482.3 16 498.7 29.3 512 45.7 512l356.6 0c16.4 0 29.7-13.3 29.7-29.7 0-98.5-79.8-178.3-178.3-178.3l-59.4 0z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="title"
            >
              Players
            </div>
            <div
              class="value"
            >
              2
            </div>
          </div>
          <div
            class="item"
          >
            <div
              class="icon"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-circle-question"
                data-icon="circle-question"
                data-prefix="fas"
                role="img"
                viewBox="0 0 512 512"
              >
                <path
                  d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm0-336c-17.7 0-32 14.3-32 32 0 13.3-10.7 24-24 24s-24-10.7-24-24c0-44.2 35.8-80 80-80s80 35.8 80 80c0 47.2-36 67.2-56 74.5l0 3.8c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-8.1c0-20.5 14.8-35.2 30.1-40.2 6.4-2.1 13.2-5.5 18.2-10.3 4.3-4.2 7.7-10 7.7-19.6 0-17.7-14.3-32-32-32zM224 368a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="title"
            >
              Questions
            </div>
            <div
              class="value"
            >
              2
            </div>
          </div>
        </div>
        <div
          class="separator"
        />
        <div
          class="column"
        >
          <div
            class="item"
          >
            <div
              class="icon"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-user-tie"
                data-icon="user-tie"
                data-prefix="fas"
                role="img"
                viewBox="0 0 448 512"
              >
                <path
                  d="M224 248a120 120 0 1 1 0-240 120 120 0 1 1 0 240zm-30.5 56l61 0c9.7 0 17.5 7.8 17.5 17.5 0 4.2-1.5 8.2-4.2 11.4l-27.4 32 31 115.1 .6 0 34.6-138.5c2.2-8.7 11.1-14 19.5-10.8 61.9 23.6 105.9 83.6 105.9 153.8 0 15.1-12.3 27.4-27.4 27.4L43.4 512c-15.1 0-27.4-12.3-27.4-27.4 0-70.2 44-130.2 105.9-153.8 8.4-3.2 17.3 2.1 19.5 10.8l34.6 138.5 .6 0 31-115.1-27.4-32c-2.7-3.2-4.2-7.2-4.2-11.4 0-9.7 7.8-17.5 17.5-17.5z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="title"
            >
              Host
            </div>
            <div
              class="value"
            >
              FrostyBear
            </div>
          </div>
          <div
            class="item"
          >
            <div
              class="icon"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-calendar"
                data-icon="calendar"
                data-prefix="fas"
                role="img"
                viewBox="0 0 448 512"
              >
                <path
                  d="M128 0C110.3 0 96 14.3 96 32l0 32-32 0C28.7 64 0 92.7 0 128l0 48 448 0 0-48c0-35.3-28.7-64-64-64l-32 0 0-32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 32-128 0 0-32c0-17.7-14.3-32-32-32zM0 224L0 416c0 35.3 28.7 64 64 64l320 0c35.3 0 64-28.7 64-64l0-192-448 0z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="title"
            >
              Date
            </div>
            <div
              class="value"
            >
              2025-01-01 12:00
            </div>
          </div>
          <div
            class="item"
          >
            <div
              class="icon"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-clock"
                data-icon="clock"
                data-prefix="fas"
                role="img"
                viewBox="0 0 512 512"
              >
                <path
                  d="M256 0a256 256 0 1 1 0 512 256 256 0 1 1 0-512zM232 120l0 136c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2 280 120c0-13.3-10.7-24-24-24s-24 10.7-24 24z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="title"
            >
              Duration
            </div>
            <div
              class="value"
            >
              dur:0
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`SummarySection > renders Classic summary, uses getCorrectPercentage, shows fastest and longest streak 1`] = `
<div>
  <section>
    <div
      class="cards"
    >
      <div
        class="card full progress"
      >
        <svg
          class="circularProgressBar correct medium"
          height="100"
          width="100"
        >
          <circle
            class="circleBackground"
            cx="50"
            cy="50"
            fill="transparent"
            r="45"
            stroke-width="10"
          />
          <circle
            class="circleProgress"
            cx="50"
            cy="50"
            fill="transparent"
            r="45"
            stroke-linecap="round"
            stroke-width="10"
            style="stroke-dasharray: 282.7433388230814; stroke-dashoffset: 84.82300164692444;"
          />
          <text
            class="progressText"
            dominant-baseline="middle"
            text-anchor="middle"
            x="50%"
            y="50%"
          >
            70
            %
          </text>
        </svg>
        <div
          class="text"
        >
          Difficulty: 70%
        </div>
      </div>
      <div
        class="card full details"
      >
        <div
          class="column"
        >
          <div
            class="item"
          >
            <div
              class="icon"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-gamepad"
                data-icon="gamepad"
                data-prefix="fas"
                role="img"
                viewBox="0 0 640 512"
              >
                <path
                  d="M448 64c106 0 192 86 192 192S554 448 448 448l-256 0C86 448 0 362 0 256S86 64 192 64l256 0zM192 176c-13.3 0-24 10.7-24 24l0 32-32 0c-13.3 0-24 10.7-24 24s10.7 24 24 24l32 0 0 32c0 13.3 10.7 24 24 24s24-10.7 24-24l0-32 32 0c13.3 0 24-10.7 24-24s-10.7-24-24-24l-32 0 0-32c0-13.3-10.7-24-24-24zm240 96a32 32 0 1 0 0 64 32 32 0 1 0 0-64zm64-96a32 32 0 1 0 0 64 32 32 0 1 0 0-64z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="title"
            >
              Game Mode
            </div>
            <div
              class="value"
            >
              Classic
            </div>
          </div>
          <div
            class="item"
          >
            <div
              class="icon"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-user"
                data-icon="user"
                data-prefix="fas"
                role="img"
                viewBox="0 0 448 512"
              >
                <path
                  d="M224 248a120 120 0 1 0 0-240 120 120 0 1 0 0 240zm-29.7 56C95.8 304 16 383.8 16 482.3 16 498.7 29.3 512 45.7 512l356.6 0c16.4 0 29.7-13.3 29.7-29.7 0-98.5-79.8-178.3-178.3-178.3l-59.4 0z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="title"
            >
              Players
            </div>
            <div
              class="value"
            >
              2
            </div>
          </div>
          <div
            class="item"
          >
            <div
              class="icon"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-circle-question"
                data-icon="circle-question"
                data-prefix="fas"
                role="img"
                viewBox="0 0 512 512"
              >
                <path
                  d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm0-336c-17.7 0-32 14.3-32 32 0 13.3-10.7 24-24 24s-24-10.7-24-24c0-44.2 35.8-80 80-80s80 35.8 80 80c0 47.2-36 67.2-56 74.5l0 3.8c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-8.1c0-20.5 14.8-35.2 30.1-40.2 6.4-2.1 13.2-5.5 18.2-10.3 4.3-4.2 7.7-10 7.7-19.6 0-17.7-14.3-32-32-32zM224 368a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="title"
            >
              Questions
            </div>
            <div
              class="value"
            >
              2
            </div>
          </div>
        </div>
        <div
          class="separator"
        />
        <div
          class="column"
        >
          <div
            class="item"
          >
            <div
              class="icon"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-user-tie"
                data-icon="user-tie"
                data-prefix="fas"
                role="img"
                viewBox="0 0 448 512"
              >
                <path
                  d="M224 248a120 120 0 1 1 0-240 120 120 0 1 1 0 240zm-30.5 56l61 0c9.7 0 17.5 7.8 17.5 17.5 0 4.2-1.5 8.2-4.2 11.4l-27.4 32 31 115.1 .6 0 34.6-138.5c2.2-8.7 11.1-14 19.5-10.8 61.9 23.6 105.9 83.6 105.9 153.8 0 15.1-12.3 27.4-27.4 27.4L43.4 512c-15.1 0-27.4-12.3-27.4-27.4 0-70.2 44-130.2 105.9-153.8 8.4-3.2 17.3 2.1 19.5 10.8l34.6 138.5 .6 0 31-115.1-27.4-32c-2.7-3.2-4.2-7.2-4.2-11.4 0-9.7 7.8-17.5 17.5-17.5z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="title"
            >
              Host
            </div>
            <div
              class="value"
            >
              FrostyBear
            </div>
          </div>
          <div
            class="item"
          >
            <div
              class="icon"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-calendar"
                data-icon="calendar"
                data-prefix="fas"
                role="img"
                viewBox="0 0 448 512"
              >
                <path
                  d="M128 0C110.3 0 96 14.3 96 32l0 32-32 0C28.7 64 0 92.7 0 128l0 48 448 0 0-48c0-35.3-28.7-64-64-64l-32 0 0-32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 32-128 0 0-32c0-17.7-14.3-32-32-32zM0 224L0 416c0 35.3 28.7 64 64 64l320 0c35.3 0 64-28.7 64-64l0-192-448 0z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="title"
            >
              Date
            </div>
            <div
              class="value"
            >
              2025-01-01 12:00
            </div>
          </div>
          <div
            class="item"
          >
            <div
              class="icon"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-clock"
                data-icon="clock"
                data-prefix="fas"
                role="img"
                viewBox="0 0 512 512"
              >
                <path
                  d="M256 0a256 256 0 1 1 0 512 256 256 0 1 1 0-512zM232 120l0 136c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2 280 120c0-13.3-10.7-24-24-24s-24 10.7-24 24z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="title"
            >
              Duration
            </div>
            <div
              class="value"
            >
              dur:123
            </div>
          </div>
        </div>
      </div>
      <div
        class="card metric"
      >
        <div
          class="title"
        >
          Fastest Overall Player
        </div>
        <div
          class="value"
        >
          sec:3.2
        </div>
        <div
          class="nickname"
        >
          Alice
        </div>
      </div>
      <div
        class="card metric"
      >
        <div
          class="title"
        >
          Longest Correct Streak
        </div>
        <div
          class="value"
        >
          7
        </div>
        <div
          class="nickname"
        >
          Bob
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`SummarySection > renders ZeroToOneHundred summary and uses getAveragePrecision 1`] = `
<div>
  <section>
    <div
      class="cards"
    >
      <div
        class="card full progress"
      >
        <svg
          class="circularProgressBar correct medium"
          height="100"
          width="100"
        >
          <circle
            class="circleBackground"
            cx="50"
            cy="50"
            fill="transparent"
            r="45"
            stroke-width="10"
          />
          <circle
            class="circleProgress"
            cx="50"
            cy="50"
            fill="transparent"
            r="45"
            stroke-linecap="round"
            stroke-width="10"
            style="stroke-dasharray: 282.7433388230814; stroke-dashoffset: 141.3716694115407;"
          />
          <text
            class="progressText"
            dominant-baseline="middle"
            text-anchor="middle"
            x="50%"
            y="50%"
          >
            50
            %
          </text>
        </svg>
        <div
          class="text"
        >
          Difficulty: 50%
        </div>
      </div>
      <div
        class="card full details"
      >
        <div
          class="column"
        >
          <div
            class="item"
          >
            <div
              class="icon"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-gamepad"
                data-icon="gamepad"
                data-prefix="fas"
                role="img"
                viewBox="0 0 640 512"
              >
                <path
                  d="M448 64c106 0 192 86 192 192S554 448 448 448l-256 0C86 448 0 362 0 256S86 64 192 64l256 0zM192 176c-13.3 0-24 10.7-24 24l0 32-32 0c-13.3 0-24 10.7-24 24s10.7 24 24 24l32 0 0 32c0 13.3 10.7 24 24 24s24-10.7 24-24l0-32 32 0c13.3 0 24-10.7 24-24s-10.7-24-24-24l-32 0 0-32c0-13.3-10.7-24-24-24zm240 96a32 32 0 1 0 0 64 32 32 0 1 0 0-64zm64-96a32 32 0 1 0 0 64 32 32 0 1 0 0-64z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="title"
            >
              Game Mode
            </div>
            <div
              class="value"
            >
              0 to 100
            </div>
          </div>
          <div
            class="item"
          >
            <div
              class="icon"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-user"
                data-icon="user"
                data-prefix="fas"
                role="img"
                viewBox="0 0 448 512"
              >
                <path
                  d="M224 248a120 120 0 1 0 0-240 120 120 0 1 0 0 240zm-29.7 56C95.8 304 16 383.8 16 482.3 16 498.7 29.3 512 45.7 512l356.6 0c16.4 0 29.7-13.3 29.7-29.7 0-98.5-79.8-178.3-178.3-178.3l-59.4 0z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="title"
            >
              Players
            </div>
            <div
              class="value"
            >
              2
            </div>
          </div>
          <div
            class="item"
          >
            <div
              class="icon"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-circle-question"
                data-icon="circle-question"
                data-prefix="fas"
                role="img"
                viewBox="0 0 512 512"
              >
                <path
                  d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm0-336c-17.7 0-32 14.3-32 32 0 13.3-10.7 24-24 24s-24-10.7-24-24c0-44.2 35.8-80 80-80s80 35.8 80 80c0 47.2-36 67.2-56 74.5l0 3.8c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-8.1c0-20.5 14.8-35.2 30.1-40.2 6.4-2.1 13.2-5.5 18.2-10.3 4.3-4.2 7.7-10 7.7-19.6 0-17.7-14.3-32-32-32zM224 368a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="title"
            >
              Questions
            </div>
            <div
              class="value"
            >
              2
            </div>
          </div>
        </div>
        <div
          class="separator"
        />
        <div
          class="column"
        >
          <div
            class="item"
          >
            <div
              class="icon"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-user-tie"
                data-icon="user-tie"
                data-prefix="fas"
                role="img"
                viewBox="0 0 448 512"
              >
                <path
                  d="M224 248a120 120 0 1 1 0-240 120 120 0 1 1 0 240zm-30.5 56l61 0c9.7 0 17.5 7.8 17.5 17.5 0 4.2-1.5 8.2-4.2 11.4l-27.4 32 31 115.1 .6 0 34.6-138.5c2.2-8.7 11.1-14 19.5-10.8 61.9 23.6 105.9 83.6 105.9 153.8 0 15.1-12.3 27.4-27.4 27.4L43.4 512c-15.1 0-27.4-12.3-27.4-27.4 0-70.2 44-130.2 105.9-153.8 8.4-3.2 17.3 2.1 19.5 10.8l34.6 138.5 .6 0 31-115.1-27.4-32c-2.7-3.2-4.2-7.2-4.2-11.4 0-9.7 7.8-17.5 17.5-17.5z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="title"
            >
              Host
            </div>
            <div
              class="value"
            >
              FrostyBear
            </div>
          </div>
          <div
            class="item"
          >
            <div
              class="icon"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-calendar"
                data-icon="calendar"
                data-prefix="fas"
                role="img"
                viewBox="0 0 448 512"
              >
                <path
                  d="M128 0C110.3 0 96 14.3 96 32l0 32-32 0C28.7 64 0 92.7 0 128l0 48 448 0 0-48c0-35.3-28.7-64-64-64l-32 0 0-32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 32-128 0 0-32c0-17.7-14.3-32-32-32zM0 224L0 416c0 35.3 28.7 64 64 64l320 0c35.3 0 64-28.7 64-64l0-192-448 0z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="title"
            >
              Date
            </div>
            <div
              class="value"
            >
              2025-01-01 12:00
            </div>
          </div>
          <div
            class="item"
          >
            <div
              class="icon"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-clock"
                data-icon="clock"
                data-prefix="fas"
                role="img"
                viewBox="0 0 512 512"
              >
                <path
                  d="M256 0a256 256 0 1 1 0 512 256 256 0 1 1 0-512zM232 120l0 136c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2 280 120c0-13.3-10.7-24-24-24s-24 10.7-24 24z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="title"
            >
              Duration
            </div>
            <div
              class="value"
            >
              dur:45
            </div>
          </div>
        </div>
      </div>
      <div
        class="card metric"
      >
        <div
          class="title"
        >
          Fastest Overall Player
        </div>
        <div
          class="value"
        >
          sec:2.1
        </div>
        <div
          class="nickname"
        >
          Carol
        </div>
      </div>
      <div
        class="card metric"
      >
        <div
          class="title"
        >
          Longest Correct Streak
        </div>
        <div
          class="value"
        >
          3
        </div>
        <div
          class="nickname"
        >
          Dave
        </div>
      </div>
    </div>
  </section>
</div>
`;
